--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "docker:up": "docker-compose up",
     "migration:generate": "npx sequelize-cli migration:generate --name my-migration",
     "migration:up": "npx sequelize-cli db:migrate",
-    "migration:down": "npx sequelize-cli db:migrate:undo:all",
+    "migration:down": "npx sequelize-cli db:migrate:undo",
+    "migration:down_all": "npx sequelize-cli db:migrate:undo:all",
     "seed:up": "npx sequelize-cli db:seed:all",
-    "seed:down": "npx sequelize-cli db:seed:undo:all",
+    "seed:down": "npx sequelize-cli db:seed:undo",
+    "seed:down_all": "npx sequelize-cli db:seed:undo:all",
     "start": "npm run build && node dist/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc"
