--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
 
     // Recommended Options
     "strict": true,
+    "allowJs": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": false,            // was true - i modified this
     "isolatedModules": true,
