--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
+    "testWatchAll": "jest --detectOpenHandles --watchAll",
     "docker:up": "docker-compose up",
     "migration:generate": "npx sequelize-cli migration:generate --name my-migration",
     "migration:up": "npx sequelize-cli db:migrate",
@@ -20,19 +21,33 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/supertest": "^6.0.3",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^30.2.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
+    "sqlite3": "^5.1.7",
+    "superagent": "^10.2.3",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@sequelize/sqlite3": "^7.0.0-alpha.47",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -47,5 +62,13 @@
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "socket.io": "^4.8.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/**/*.test.ts"
+    ],
+    "verbose": true
   }
 }
